--- a/package.json
+++ b/package.json
@@ -6,26 +6,29 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "up-mongo-db": "docker-compose up -d",
     "build": "nest build",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:all-e2e": "jest --config ./test/jest.e2e.json --runInBand",
-    "test:user-e2e": "jest --config ./test/jest.e2e.json ./test/user.e2e.spec.ts",
-    "test:auth-e2e": "jest --config ./test/jest.e2e.json ./test/auth.e2e.spec.ts",
-    "test:blog-e2e": "jest --config ./test/jest.e2e.json ./test/blog.e2e.spec.ts",
-    "test:post-e2e": "jest --config ./test/jest.e2e.json ./test/post.e2e.spec.ts",
-    "test:comment-e2e": "jest --config ./test/jest.e2e.json ./test/comment.e2e.spec.ts"
+    "test:watch": "cross-env NODE_ENV=testing jest --watch",
+    "test:cov": "cross-env NODE_ENV=testing jest --coverage",
+    "test:debug": "cross-env NODE_ENV=testing node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:all-e2e": "cross-env NODE_ENV=testing jest --config ./test/jest.e2e.json --runInBand",
+    "test:user-e2e": "cross-env NODE_ENV=testing jest --config ./test/jest.e2e.json ./test/user.e2e.spec.ts",
+    "test:auth-e2e": "cross-env NODE_ENV=testing jest --config ./test/jest.e2e.json ./test/auth.e2e.spec.ts",
+    "test:blog-e2e": "cross-env NODE_ENV=testing jest --config ./test/jest.e2e.json ./test/blog.e2e.spec.ts",
+    "test:post-e2e": "cross-env NODE_ENV=testing jest --config ./test/jest.e2e.json ./test/post.e2e.spec.ts",
+    "test:device-e2e": "cross-env NODE_ENV=testing jest --config ./test/jest.e2e.json ./test/device.e2e.spec.ts",
+    "test:comment-e2e": "cross-env NODE_ENV=testing jest --config ./test/jest.e2e.json ./test/comment.e2e.spec.ts"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^11.0.1",
     "@nestjs/jwt": "^10.2.0",
@@ -42,6 +45,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "mongoose": "^8.7.0",
     "ngrok": "^5.0.0-beta.2",
